--- a/immortal.tt
+++ b/immortal.tt
@@ -1,7 +1,8 @@
 #config {TINTIN CHAR} /
 /var myname immortal
 /nop session $myname china.fengyun.com 6000
-/session $myname fy.sysfon.com 6000
+/nop session $myname fy.sysfon.com 6000
+/session $myname fy.fengyun2014.com 6000
 /ac {^请选择您使用的内码}{0}
 /ac {^您的英文名字：} {$myname}
 /al reload {/read $myname.tt}
@@ -91,12 +92,12 @@
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{set wimpy 30;cks;/al healme hh;hh}
 /ac {^你运起太极两仪功}{/al healme {;}}
 /ac {^你所选用的武功中没有这种必杀技}{getsword;get jade}
-/read gag.sc
-/read path.sc
-/read normal.sc
-/read quest.sc
+/read comm/gag.sc
+/read comm/path.sc
+/read comm/normal.sc
+/read comm/quest.sc
 /read teama.sc
-/read status_2.sc
+/read comm/status_2.sc
 /nop log o ../$myname.log
 /ac {^【新手】} {/line log ../chat-$myname.log}{raw}
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
