--- a/nurse.tt
+++ b/nurse.tt
@@ -3,7 +3,8 @@
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname fy.hbisp.com 3333
 /nop session $myname china.fengyun.com 6000
-/session $myname fy.sysfon.com 6000
+/nop session $myname fy.sysfon.com 6000
+/session $myname main.fengyun6666.com 6666
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
@@ -39,12 +40,12 @@
 /ac {^『漫天花雨』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
 /ac {^雪里春信只能在战斗}{/if {$is_kill==1}{stopk;cks}}
 /ac {^你所选用的武功中没有这种必杀技。}{get piece;wim}
-/read gag.sc
-/read path.sc
-/read normal.sc
-/read quest.sc
-/read team.sc
-/read status.sc
+/read comm/gag.sc
+/read comm/path.sc
+/read comm/normal.sc
+/read comm/quest.sc
+/read comm/team4.sc
+/read comm/status.sc
 /nop read hb.tin
 /nop log o $myname.log
 /nop ac {^【新手】} {/line log chat-$myname.log}{text}
@@ -96,4 +97,3 @@
   retrieve 1272;
   wear all
  }
-/read autorecover.sc
