--- a/tank.tt
+++ b/tank.tt
@@ -15,8 +15,9 @@
 /ac {^#SESSION '%0' ACTIVATED.}{/read %0.tt}
 /ac {^  帝王谷%0护士(Nurse)}{give nurse silver;tget 30 silver}
 /al jd {th jd $myname}
-/al wim {wield blade;wi jade}
+/al wim {wield jade;wi short sword;wi blade}
 /al buff {baohu nurse;exert juqi;/delay {1}{perform dodge.xiaosha}}
+/al buff {exert juqi;/delay {1}{perform dodge.xiaosha}}
 /nop al buff {baohu nurse;exert juqi;/delay {1}{perform dodge.wuye}}
 /ac {^你停止保护你的妻子}{baohu nurse}
 /al initk {
@@ -32,15 +33,18 @@
 /ac {^dg}{/if {$t_dgcm > 2}{initk}}
 /al kkk {
     /if {$ok_cm==1 || $ok_dg==1}{initk};
-    /if {$is_dg==0 && $is_cm==0}{unwi all; zc; wim; j; k};
+    /nop if {$is_dg==0 && $is_cm==0}{unwi all; zc; wim; j; k};
+    /if {$is_dg==0 && $is_cm==0}{j;k};
     /if {$is_dg==0 && $is_cm==1}{cm_k};
     /if {$is_dg==1 && $is_cm==0}{dg_k};
     /if {$is_dg==1 && $is_cm==1}{cm_k}
 }
 /al duange_pf {/var t_dgcm 0; /var is_dg 1}
 /al changmeng_pf {/var t_dgcm 0; /var is_cm 1}
-/ac {你长啸一声，凌空而起}{initk;dgcm-}
-/ac {你手腕一挫，硬生生收住刀势}{initk;dgcm-}
+/nop ac {你长啸一声，凌空而起}{initk;dgcm-}
+/ac {你长啸一声，凌空而起}{/var is_cm 1;dgcm-}
+/nop ac {你手腕一挫，硬生生收住刀势}{initk;dgcm-}
+/ac {你手腕一挫，硬生生收住刀势}{/var is_dg 1;;dgcm-}
 /al duange {
   /showme {dodge---duange---};
   duange_pf
@@ -50,9 +54,9 @@
     changmeng_pf
 }
 /al ki {initk;set target %0;buff;/delay {2}{kill %0}}
-/al ki {initk;set target %0;buff;/delay {1}{kill %0}}
-/al startk {nwlk;iskill;wi blade;j;k; /ticker {kill} {j;k} {5}}
+/al ki {initk;unwi all;set target %0;buff;/delay {1}{kill %0;zc}}
 /al startk {initk;nwlk;iskill;kkk; /ticker {kill} {kkk} {5}}
+/al startk {initk;nwlk;iskill;wim;k; /ticker {kill} {kkk} {4.4}}
 /al stopk {initk; /unticker {kill};nokill}
 /ac {^你对著%0！今日不是你死就是我活！} {iskill;unwi all;perform taunt;startk;/var knpc %0}
 /ac {^你对著%0说道：在下%1，领教壮士的高招！}{iskill;kkk;startk;/var knpc %0}
@@ -64,7 +68,7 @@
 /ac {^『争春』只能对战斗}{/if {$is_kill==1}{stopk;cks}}
 /ac {^( 你似乎十分疲惫，看来需要好好休息了}{thh;/delay {1}{thh}}
 /ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{thh;exert qi;/delay {3}{thh;exert qi}}
-/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{thh;exert qi;/delay {3}{thh;exert qi}}
+/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{juxue $myname;thh;exert qi;/delay {3}{thh;exert qi}}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{juxue $myname;thh}
 /ac {^你所选用的武功中没有这种必杀技。}{unwi all;get jade;wim}
 /read comm/gag.sc
@@ -86,6 +90,7 @@
 /var {parrymsg} {{封}{迫}{击}{刺}{慢}{退}{逼}{击}{偏}{攻}{化解}{夹}{拍}{格}{引}{粘}{点}{带}{泥牛入海}{九重刀幕}{荡}{削}{磕}{架}{护}{躲}{麻}{砸}{磕}{捣}{落}{撤}{吸}{圈}{罩}{锁}{阴风刺骨}{扑}{弹}{剑网}{不知所措}{抖}{围}{砍}{踉踉跄跄}{退步}}
 /var {dodgemsg} {{飘}{避了}{闪过}{翻身}{绕到}{滑}{落}{绕到}{挪}{舞}{退出}{转}{踪迹}{掠出}{纵}{窜}{弹开}{遁}{扑}{避开}{躲闪}{身影一晃}{身形飘忽}{足不点地}{避}{躲}{闪}}
 /ac {^第二刀}{dgcm+;/showme  自动判断dodge or parry}{3}
+/ac {^你更不放松，竟又挥出第三刀}{initk;dgcm+;/showme  自动判断dodge or parry}{3}
 /ac {^你说道：自动判断dodge or parry}{dgcm-}
 /ac {^dodge---duange---}{dgcm-;/showme ===== 短歌 多砍一刀，哈哈=====}
 /ac {^parry---changmeng---}{dgcm-;/showme ===== 长梦 多砍一刀，哈哈=====}
@@ -95,7 +100,7 @@
 /al dgcm+ {
     /gag {^你使出「兰};
     /gag {^护士的身影};
-          /unac {原地没有动过}{duange};
+          /ac {原地没有动过}{duange};
           /ac {天人相助}{/delay {0.2}{initk}}{3};
           /ac {不躲不闪}{/delay {0.2}{changmeng}}{3};
           /ac {攻势化于无形}{/delay {0.2}{changmeng}}{3};
@@ -160,10 +165,14 @@
                                                   /ac {往外推出}{/delay {0.2}{changmeng}}{3};
                                                   /ac {滴水不透}{/delay {0.2}{changmeng}}{3};
                                                   /ac {早已绕到你身後}{/delay {0.2}{duange}}{3};
-                                                  /ac {^你将内力凝}{dgcm-;/delay {0.4}{initk}}{3};
-                                                  /ac {^Enemy:kee}{dgcm-;/delay {0.4}{initk}}{3}
+                                                  /ac {^你将内力凝}{dgcm-;/delay {0.3}{initk}}{3};
+                                                  /ac {^Enemy:kee}{dgcm-;/delay {0.3}{initk}}{3};
+          /ac {你急忙撤肘收招。}{de06 {initk}};
+          /ac {你将内力凝为一线}{de06 {initk}};
 }
 /al dgcm- {
+          /unac {你急忙撤肘收招。};
+          /unac {你将内力凝为一线};
           /unac {避};
           /unac {原地没有动过};
           /unac {天人相助};
