--- a/curer.tt
+++ b/curer.tt
@@ -8,6 +8,7 @@
 /nop session $myname 122.200.77.32 6000
 /nop fy.sysfon.com (124.193.186.169)
 /session $myname main.fengyun6666.com 6666
+/session $myname 121.40.128.202 6666
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
